# harujion

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: Master.bank  Master.strings.bank  box_layout.lua  button.lua  camera.lua  game_state.lua  hbox.lua  main.lua  menu_state.lua  nine_patch.lua  pipes.lua  player.lua  rect.lua  test_tilemap.lua  test_tilemap.tmx  test_tileset.lua  test_tileset.tsx  testmap.lua  tileset.lua  vbox.lua
assets/flappy/: flappy.lua  pipes.lua  player.lua  sfx.lua
assets/tilemap/: gameboy.tsx  testmap.tmx  tilemap.lua  tileset.lua
assets/topdown/: bullet.lua  bullet_manager.lua  enemy.lua  enemy_manager.lua  player.lua  topdown.lua
assets/ui/: box_layout.lua  button.lua  hbox.lua  rect.lua  text.lua
dependencies/: CMakeLists.txt
dependencies/fmod/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: gl.h
dependencies/imgui/: CMakeLists.txt
dependencies/lua/: CMakeLists.txt
dependencies/luajit/: CMakeLists.txt
dependencies/luajit/lib/: lua51.lib
dependencies/sol2/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
include/: basic_shader.h  dynamic_draw_shader.h  engine.h  fmod_audio.h  image.h  input.h  keyboard.h  mouse.h  non_copyable.h  physfs.h  renderer.h  script.h  sprite.h  sprite_shader.h  sprite_vertices.h  texture.h  texture_loader.h  vertex.h  vertex_array.h  window.h
include/renderer/: camera.h  dynamic_draw_shader.h  image.h  renderer.h  shader.h  shader_globals.h  sprite.h  sprite_shader.h  texture.h  texture_loader.h  vertex.h  vertex_array.h
include/renderer/sprite/: sprite.h  sprite_font.h  sprite_shader.h  sprite_vertices.h
include/renderer/tile/: tileset.h
samples/basic_ui/: classic.lua  main.lua  nine_patch.lua
samples/basic_ui/ui/: button.lua  vbox.lua
samples/multi_games/: camera.lua  mathf.lua  vec2.lua
samples/multi_games/flappy/: flappy.lua  pipes.lua  player.lua
src/: CMakeLists.txt  basic_shader.cpp  dynamic_draw_shader.cpp  engine.cpp  fmod_audio.cpp  image.cpp  input.cpp  keyboard.cpp  main.cpp  mouse.cpp  physfs.cpp  renderer.cpp  script.cpp  shader.cpp  shader_globals.cpp  sprite.cpp  sprite_shader.cpp  sprite_vertices.cpp  texture.cpp  texture_loader.cpp  vertex_array.cpp  window.cpp
src/renderer/: camera.cpp  dynamic_draw_shader.cpp  image.cpp  renderer.cpp  shader.cpp  shader_globals.cpp  sprite.cpp  sprite_shader.cpp  sprite_vertices.cpp  texture.cpp  texture_loader.cpp  vertex_array.cpp
src/renderer/sprite/: sprite.cpp  sprite_font.cpp  sprite_shader.cpp  sprite_vertices.cpp
src/renderer/tile/: tileset.cpp
